Dkms post and fixed link

--- a/output/hello.html
+++ b/output/hello.html
@@ -27,10 +27,10 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <link rel="alternate" href="" hreflang="en" />
-<link rel="dns-prefetch" href="">
+    <link rel="alternate" href="https://nekopy.github.io" hreflang="en" />
+<link rel="dns-prefetch" href="https://nekopy.github.io">
 <link rel="dns-prefetch" href="//code.getmdl.io">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="https://nekopy.github.io/favicon.ico">
     <title>Hello Internet</title>
 </head>
 <body>
@@ -44,7 +44,7 @@
                 </div>
                 <span class="eevee-logo mdl-color-text--accent mdl-layout-title">
                     <h2>
-                        <a href="" rel="bookmark"
+                        <a href="https://nekopy.github.io" rel="bookmark"
                            title="stderr">
                             stderr
                         </a>
@@ -73,7 +73,7 @@
                      itemtype="http://schema.org/SiteNavigationElement"
                      aria-label="Header navigation">
                     <a class="mdl-color-text--accent mdl-navigation__link"
-                       href="" itemprop="url" rel="bookmark">
+                       href="https://nekopy.github.io" itemprop="url" rel="bookmark">
                         Home
                     </a>
     <a class="mdl-color-text--accent mdl-navigation__link"
@@ -108,7 +108,7 @@
 <meta itemprop="accessibilityAPI" content="ARIA">
     <div itemprop="author" itemscope
          itemtype="https://schema.org/Person" role="presentation">
-        <a href="/author/nekopy.html" class="hidden"
+        <a href="https://nekopy.github.io/author/nekopy.html" class="hidden"
            itemprop="url" role="presentation">
             <span class="hidden" itemprop="name" role="presentation">
                 neko.py
@@ -123,28 +123,28 @@
         <div>
             <ul class="social-share mdl-navigation">
                 <li class="social-share__link social-share__link--twitter">
-                    <a href="https://twitter.com/intent/tweet?text=Hello%20Internet&amp;url=/hello.html"
+                    <a href="https://twitter.com/intent/tweet?text=Hello%20Internet&amp;url=https%3A//nekopy.github.io/hello.html"
                        title="Share 'Hello Internet' on Twitter"
                        onclick="window.open(this.href, 'twitter-share', 'width=550,height=235'); return false;">
                         <i class="fa fa-twitter" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li class="social-share__link social-share__link--facebook">
-                    <a href="https://www.facebook.com/sharer/sharer.php?u=/hello.html"
+                    <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//nekopy.github.io/hello.html"
                        title="Share 'Hello Internet' on Facebook"
                        onclick="window.open(this.href, 'facebook-share', 'width=580,height=296'); return false;">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li class="social-share__link social-share__link--google-plus">
-                    <a href="https://plus.google.com/share?url=/hello.html"
+                    <a href="https://plus.google.com/share?url=https%3A//nekopy.github.io/hello.html"
                        title="Share 'Hello Internet' on Google+"
                        onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
                         <i class="fa fa-google" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li class="social-share__link social-share__link--email">
-                    <a href="mailto:?subject=Hello%20Internet&amp;body=Hello%20Internet%20-%20/hello.html%0A%0Asite%20dedication' via email">
+                    <a href="mailto:?subject=Hello%20Internet&amp;body=Hello%20Internet%20-%20https%3A//nekopy.github.io/hello.html%0A%0Asite%20dedication' via email">
                         <i class="material-icons" aria-hidden="true">&#xE0E1;</i>
                     </a>
                 </li>
@@ -159,7 +159,7 @@
                 </time>
             </div>
             <h1 itemprop="name">
-                <a href="/hello.html" rel="bookmark"
+                <a href="https://nekopy.github.io/hello.html" rel="bookmark"
                    title="Permalink to 'Hello Internet'"
                    itemprop="url">
                     Hello Internet
@@ -237,7 +237,13 @@
         <h1 class="mdl-mega-footer--heading">Categories</h1>
         <ul class="mdl-mega-footer--link-list">
                 <li>
-                    <a href="/category/misc.html" itemprop="url"
+                    <a href="https://nekopy.github.io/category/linux.html" itemprop="url"
+                       rel="bookmark">
+                        linux
+                    </a>
+                </li>
+                <li>
+                    <a href="https://nekopy.github.io/category/misc.html" itemprop="url"
                        rel="bookmark">
                         misc
                     </a>
@@ -266,7 +272,7 @@
     </div>
 </div>            <div class="mdl-mega-footer--bottom-section">
                 <div class="mdl-logo">
-                    <a href="" rel="bookmark" itemprop="url"
+                    <a href="https://nekopy.github.io" rel="bookmark" itemprop="url"
                        title="stderr">
                         stderr
                     </a>
@@ -281,16 +287,16 @@
     <link rel="stylesheet"
           href="//code.getmdl.io/1.1.3/material.blue_grey-indigo.min.css">
         <link rel="stylesheet" type="text/css"
-              href="/theme/css/font-awesome.css">
+              href="https://nekopy.github.io/theme/css/font-awesome.css">
         <link rel="stylesheet" type="text/css"
-              href="/theme/css/material-icons.css">
+              href="https://nekopy.github.io/theme/css/material-icons.css">
         <link rel="stylesheet" type="text/css"
-              href="/theme/css/pygments.css">
+              href="https://nekopy.github.io/theme/css/pygments.css">
         <link rel="stylesheet" type="text/css"
-              href="/theme/css/eevee.css">
+              href="https://nekopy.github.io/theme/css/eevee.css">
         <link rel="stylesheet" type="text/css"
-              href="/theme/css/custom.css">
-        <script async src="/theme/js/material.js">
+              href="https://nekopy.github.io/theme/css/custom.css">
+        <script async src="https://nekopy.github.io/theme/js/material.js">
         </script>
 </body>
 </html>
