--- a/output/authors.html
+++ b/output/authors.html
@@ -27,10 +27,10 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <link rel="alternate" href="" hreflang="en" />
-<link rel="dns-prefetch" href="">
+    <link rel="alternate" href="https://nekopy.github.io" hreflang="en" />
+<link rel="dns-prefetch" href="https://nekopy.github.io">
 <link rel="dns-prefetch" href="//code.getmdl.io">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="https://nekopy.github.io/favicon.ico">
     <title>Authors</title>
 </head>
 <body>
@@ -44,7 +44,7 @@
                 </div>
                 <span class="eevee-logo mdl-color-text--accent mdl-layout-title">
                     <h2>
-                        <a href="" rel="bookmark"
+                        <a href="https://nekopy.github.io" rel="bookmark"
                            title="stderr">
                             stderr
                         </a>
@@ -73,7 +73,7 @@
                      itemtype="http://schema.org/SiteNavigationElement"
                      aria-label="Header navigation">
                     <a class="mdl-color-text--accent mdl-navigation__link"
-                       href="" itemprop="url" rel="bookmark">
+                       href="https://nekopy.github.io" itemprop="url" rel="bookmark">
                         Home
                     </a>
     <a class="mdl-color-text--accent mdl-navigation__link"
@@ -98,8 +98,8 @@
             <nav class="eevee-toc-ribbon">
                 <ul>
                         <li>
-                            <a href="/author/nekopy.html">
-                                neko.py (1 articles)
+                            <a href="https://nekopy.github.io/author/nekopy.html">
+                                neko.py (2 articles)
                             </a>
                         </li>
                 </ul>
@@ -151,7 +151,13 @@
         <h1 class="mdl-mega-footer--heading">Categories</h1>
         <ul class="mdl-mega-footer--link-list">
                 <li>
-                    <a href="/category/misc.html" itemprop="url"
+                    <a href="https://nekopy.github.io/category/linux.html" itemprop="url"
+                       rel="bookmark">
+                        linux
+                    </a>
+                </li>
+                <li>
+                    <a href="https://nekopy.github.io/category/misc.html" itemprop="url"
                        rel="bookmark">
                         misc
                     </a>
@@ -180,7 +186,7 @@
     </div>
 </div>            <div class="mdl-mega-footer--bottom-section">
                 <div class="mdl-logo">
-                    <a href="" rel="bookmark" itemprop="url"
+                    <a href="https://nekopy.github.io" rel="bookmark" itemprop="url"
                        title="stderr">
                         stderr
                     </a>
@@ -195,16 +201,16 @@
     <link rel="stylesheet"
           href="//code.getmdl.io/1.1.3/material.blue_grey-indigo.min.css">
         <link rel="stylesheet" type="text/css"
-              href="/theme/css/font-awesome.css">
+              href="https://nekopy.github.io/theme/css/font-awesome.css">
         <link rel="stylesheet" type="text/css"
-              href="/theme/css/material-icons.css">
+              href="https://nekopy.github.io/theme/css/material-icons.css">
         <link rel="stylesheet" type="text/css"
-              href="/theme/css/pygments.css">
+              href="https://nekopy.github.io/theme/css/pygments.css">
         <link rel="stylesheet" type="text/css"
-              href="/theme/css/eevee.css">
+              href="https://nekopy.github.io/theme/css/eevee.css">
         <link rel="stylesheet" type="text/css"
-              href="/theme/css/custom.css">
-        <script async src="/theme/js/material.js">
+              href="https://nekopy.github.io/theme/css/custom.css">
+        <script async src="https://nekopy.github.io/theme/js/material.js">
         </script>
 </body>
 </html>
