--- a/output/hello.html
+++ b/output/hello.html
@@ -268,6 +268,16 @@
                         Pelican
                     </a>
                 </li>
+                <li>
+                    <a href="https://www.eff.org/" itemprop="url" rel="bookmark">
+                        EFF
+                    </a>
+                </li>
+                <li>
+                    <a href="https://fsf.org/" itemprop="url" rel="bookmark">
+                        The Free Software Foundation
+                    </a>
+                </li>
         </ul>
     </div>
 </div>            <div class="mdl-mega-footer--bottom-section">
