--- a/output/archives.html
+++ b/output/archives.html
@@ -122,6 +122,12 @@
                             Directory Encryption with eCryptfs
                         </a>
                     </li>
+                    <li>
+                        <a href="https://nekopy.github.io/luks.html" itemprop="url" rel="bookmark"
+                           title="Permalink to 'LUKS vs eCryptfs'">
+                            LUKS vs eCryptfs
+                        </a>
+                    </li>
             </ul>
         </nav>
     </section>
@@ -211,6 +217,11 @@
                 <li>
                     <a href="https://fsf.org/" itemprop="url" rel="bookmark">
                         The Free Software Foundation
+                    </a>
+                </li>
+                <li>
+                    <a href="https://creativecommons.org/" itemprop="url" rel="bookmark">
+                        Creative Commons
                     </a>
                 </li>
         </ul>
