--- a/output/tags.html
+++ b/output/tags.html
@@ -162,6 +162,13 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="https://nekopy.github.io/tag/luks.html"
+                                   title="Articles with the 'luks' tag"
+                                    itemprop="url">
+                                    luks
+                                </a>
+                            </li>
+                            <li>
                                 <a href="https://nekopy.github.io/tag/pelican.html"
                                    title="Articles with the 'pelican' tag"
                                     itemprop="url">
@@ -278,6 +285,11 @@
                 <li>
                     <a href="https://fsf.org/" itemprop="url" rel="bookmark">
                         The Free Software Foundation
+                    </a>
+                </li>
+                <li>
+                    <a href="https://creativecommons.org/" itemprop="url" rel="bookmark">
+                        Creative Commons
                     </a>
                 </li>
         </ul>
