--- a/output/authors.html
+++ b/output/authors.html
@@ -99,7 +99,7 @@
                 <ul>
                         <li>
                             <a href="https://nekopy.github.io/author/nekopy.html">
-                                neko.py (3 articles)
+                                neko.py (4 articles)
                             </a>
                         </li>
                 </ul>
@@ -190,6 +190,11 @@
                 <li>
                     <a href="https://fsf.org/" itemprop="url" rel="bookmark">
                         The Free Software Foundation
+                    </a>
+                </li>
+                <li>
+                    <a href="https://creativecommons.org/" itemprop="url" rel="bookmark">
+                        Creative Commons
                     </a>
                 </li>
         </ul>
