--- a/output/dkms.html
+++ b/output/dkms.html
@@ -310,6 +310,11 @@ dkms status
                         The Free Software Foundation
                     </a>
                 </li>
+                <li>
+                    <a href="https://creativecommons.org/" itemprop="url" rel="bookmark">
+                        Creative Commons
+                    </a>
+                </li>
         </ul>
     </div>
 </div>            <div class="mdl-mega-footer--bottom-section">
