--- a/output/ecryptfs.html
+++ b/output/ecryptfs.html
@@ -315,6 +315,11 @@
                         The Free Software Foundation
                     </a>
                 </li>
+                <li>
+                    <a href="https://creativecommons.org/" itemprop="url" rel="bookmark">
+                        Creative Commons
+                    </a>
+                </li>
         </ul>
     </div>
 </div>            <div class="mdl-mega-footer--bottom-section">
